Bug 503999 - "Mount" device action is pointless with Audio CD and blank CD/DVD/BD
Summary: "Mount" device action is pointless with Audio CD and blank CD/DVD/BD
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Disks & Devices widget (other bugs)
Version First Reported In: 6.3.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-10 10:20 UTC by Patrick Silva
Modified: 2025-05-16 00:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.6
Sentry Crash Report:


Attachments
log file (63.98 KB, text/plain)
2025-05-14 11:18 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2025-05-10 10:20:27 UTC
SUMMARY
"Mount" device action is pointless with Audio CD and blank CD/DVD/BD because they have no file system to mount.

STEPS TO REPRODUCE
1. insert an audio CD or a blank optical disc
2. wait until the inserted disc is recognized
3. click on "Disks & Devices" applet in the system tray
4. click on the inserted disc

OBSERVED RESULT
"Mount" device action is available despite it is pointless

EXPECTED RESULT
remove "Mount" device action for audio CD and blank optical discs

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.13.0
Qt Version: 6.9.0
Graphics Platform: Wayland
Comment 1 Bogdan Onofriuchuk 2025-05-14 09:06:24 UTC
Can you collect the logs please, because I don't have any disks. 
1. In terminal execute: QT_LOGGING_RULES="org.kde.applets.devicenotifier=true" plasmawindowed org.kde.plasma.devicenotifier &> log.txt
2. Reproduce the bug
3. stop the process in terminal
4. attach the file log.txt here
Comment 2 Patrick Silva 2025-05-14 11:18:48 UTC
Created attachment 181288 [details]
log file
Comment 3 Bug Janitor Service 2025-05-14 11:54:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5467
Comment 4 Bogdan Onofriuchuk 2025-05-14 11:55:30 UTC
Created a MR. Should fix your problem
Comment 5 Bogdan Onofriuchuk 2025-05-14 12:52:59 UTC
Git commit 683b8c3d71781c4e821cd2f9ac93eb4f157bb6ea by Bohdan Onofriichuk.
Committed on 14/05/2025 at 12:37.
Pushed by littlesweet into branch 'master'.

applets/devicenotifier: fix pointless mount action

Audio CD and blank CD/DVD/BD does not have storage access.
So check this before add mount action for them.

M  +12   -1    applets/devicenotifier/plugin/actions/mountaction.cpp
M  +1    -0    applets/devicenotifier/plugin/actions/mountaction.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/683b8c3d71781c4e821cd2f9ac93eb4f157bb6ea
Comment 6 Nate Graham 2025-05-16 00:39:26 UTC
Git commit 60859fa99ad81e2aff7ceb35d4ae79a304374f37 by Nate Graham.
Committed on 15/05/2025 at 21:30.
Pushed by ngraham into branch 'Plasma/6.3'.

applets/devicenotifier: fix pointless mount action

Audio CD and blank CD/DVD/BD does not have storage access.
So check this before add mount action for them.


(cherry picked from commit 683b8c3d71781c4e821cd2f9ac93eb4f157bb6ea)

Co-authored-by: Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>

M  +12   -1    applets/devicenotifier/plugin/actions/mountaction.cpp
M  +1    -0    applets/devicenotifier/plugin/actions/mountaction.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/60859fa99ad81e2aff7ceb35d4ae79a304374f37