applets/devicenotifier: fix pointless mount action

BUG: 503999

Audio CD and blank CD/DVD/BD does not have storage access.
So check this before add mount action for them.