applets/devicenotifier/plugin/actions/mountaction.h
@@ -34,6 +34,7 @@ private Q_SLOTS:
 
 private:
     bool m_supportsMTP;
+    bool m_hasStorageAccess;
 
     std::shared_ptr<DevicesStateMonitor> m_stateMonitor;
 };
